Button Global fix on Safari

--- a/html/sass/helper/helper.scss
+++ b/html/sass/helper/helper.scss
@@ -403,6 +403,7 @@ button {
 .btnManasq,
 button {
   position: relative;
+  transform: translateZ(0);
   overflow: hidden;
   span {
     position: relative;
